k8s/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
  labels:
    app: client
spec:
  type: NodePort
  selector:
    app: client
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30008
