k8s/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
  labels:
    app: server
spec:
  type: NodePort
  selector:
    app: server
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30005
